# cv

./: .gitignore  Makefile  README.md  _cv.tex  _lop.tex  build.py  cv.tex  grants.csv  justfile  pub_highlight.tex  publication_resources.csv  publications.csv  pyproject.toml  references.tex  resume.tex  update.py  update_pubs.py
data/: administrative.csv  config.yaml  courses_attended.csv  experience.csv  grants.csv  patents.csv  posters.csv  publication_resources.csv  publications.csv  skills.csv  software.csv  supervision.csv  talks.csv  teaching.csv
source/: _cv.tex  _lop.tex  cv.tex  lop.tex
